--- a/theme/basic/index.html
+++ b/theme/basic/index.html
@@ -12,7 +12,7 @@ include_once(G5_THEME_PATH.'/head.php');
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=100%; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -22,7 +22,7 @@ include_once(G5_THEME_PATH.'/head.php');
   <link rel="stylesheet" href="css/sub.css">
   <link rel="stylesheet" href="fonts/fonts.css">
   <link rel="stylesheet" href="css/swiper.min.css">
-  <script src="js/jquery-1.12.4.min.js"></script>
+  <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
   <script src="js/jquery.easeScroll.js"defer></script>
   <script src="js/swiper.min.js" defer></script>
   <script src="js/common.js"defer></script>
@@ -37,7 +37,7 @@ include_once(G5_THEME_PATH.'/head.php');
   <div class="header-wrap">
     <div class="logo">
       <img src="./img/logo.svg" alt="로고" class="icon" >
-    </div>  
+    </div>
   <header class="header">
     <div class="inner flex">
         <ul class="gnb flex">
@@ -92,7 +92,7 @@ include_once(G5_THEME_PATH.'/head.php');
             <span class="text">상담문의</span>
           </a>
         </div>
-    </div> 
+    </div>
   </header>
 </div>
 <div id="main">
@@ -130,7 +130,7 @@ include_once(G5_THEME_PATH.'/head.php');
           <img src="./img/slide_01.jpg" alt="메인슬라이드사진1">
         </div>
       </div>
-    </div>      
+    </div>
   </section>
 
   <section class="sec02">
@@ -189,8 +189,12 @@ include_once(G5_THEME_PATH.'/head.php');
     </div>
   </section>
 
+
+브랜치로 넘어옴
+여기가 브랜치 슬라이드
+
   <section class="sec04">
-    <div class="inner"> 
+    <div class="inner">
       <div class="tabcontainer">
         <div class="tit-wr">
           <h1>SERVICE</h1>
@@ -331,9 +335,10 @@ include_once(G5_THEME_PATH.'/head.php');
                   </div>
                 </a>
               </div>
+            </div>
         </div>
-        
       </div>
+    </div>
   </section>
 
   <section class="sec05">
@@ -413,7 +418,7 @@ include_once(G5_THEME_PATH.'/head.php');
       </div>
     </div>
   </section>
- 
+
   <footer class="footer">
     <div class="inner flex">
       <div class="f-info-wr">
